--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.2
+  image_picker: ^0.8.5+3
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
