--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   carousel_slider: ^5.0.0
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.0.0
+  cloud_firestore: ^4.4.0
 
 dev_dependencies:
   flutter_test:
