--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^1.2.2
   image_picker: ^1.1.2
   intl: ^0.20.1
+
   cloud_firestore: ^5.6.0
   cupertino_icons: ^1.0.8
   carousel_slider: ^5.0.0
@@ -29,11 +30,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
- 
+  firebase_auth_mocks: ^0.14.1
 
 # To resolve version conflicts if any
 dependency_overrides:
-  
+  firebase_storage_web: ^3.6.22
 
 flutter:
   # Use Material Design icons
