--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   carousel_slider: ^5.0.0
   shared_preferences: ^2.1.0
+  webview_flutter: ^4.10.0 # Updated
+  url_launcher: ^6.2.6
  
 
 # Development-only dependencies
