--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   webview_flutter_android: ^4.3.1
   webview_flutter_wkwebview: ^3.17.0
+  webview_windows: ^0.4.0
+
   fluttertoast: ^8.2.10
+  flutter_inappwebview: ^5.8.0
 
 # Development-only dependencies
 dev_dependencies:
